2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* i960ca/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* i960ka/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* i960rp/Makefile.am: Use .$(OBJEXT) instead of .o.

2001-05-09	Joel Sherrill <joel@OARcorp.com>

	* include/i960CA.h, include/i960RP.h: Correct inline assembly
	forward reference labels.
 
2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* i960ca/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* i960ka/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* i960rp/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Use 'TMPINSTALL_FILES ='.

2001-02-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* i960ca/Makefile.am, i960ka/Makefile.am, i960rp/Makefile.am:
	Remove H_FILES.
	* include/Makefile.am:  Apply include_*HEADERS instead of H_FILES.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-10-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
        Switch to GNU canonicalization.

2000-10-18	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Corrected condition CPU model selection so
	multilib'ing and bare BSP works.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
